influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__show_tag_values_statement-2.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"SHOW TAG VALUES WITH KEY =~ /host|region/\")"
---
- pre_visit_statement
- pre_visit_show_tag_values_statement
- pre_visit_with_key_clause
- post_visit_with_key_clause
- post_visit_show_tag_values_statement
- post_visit_statement

